--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,5 +21,9 @@
             30
         </session-timeout>
     </session-config>
-
+    
+    <welcome-file-list>
+            <welcome-file>redirect.jsp</welcome-file>
+        <welcome-file>redirect.jsp</welcome-file>
+    </welcome-file-list>
 </web-app>
