--- a/pom.xml
+++ b/pom.xml
@@ -89,14 +89,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
-            <version>3.5.0-Final</version>
-            <type>jar</type>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-annotations</artifactId>
-            <version>3.5.0-Final</version>
+            <version>3.6.2.Final</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
@@ -129,7 +122,8 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-entitymanager</artifactId>
-      <version>3.5.0-Final</version>
+      <version>3.6.2.Final</version>
+      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.springframework.data</groupId>
@@ -267,8 +261,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
