--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,10 +25,9 @@
         </session-timeout>
     </session-config>
     
-    <welcome-file-list>
-            <welcome-file>redirect.jsp</welcome-file>
-        <welcome-file>redirect.jsp</welcome-file>
-    </welcome-file-list>
+<welcome-file-list>
+    <welcome-file></welcome-file>
+</welcome-file-list>
     
        <filter>
         <filter-name>encoding-filter</filter-name>
