--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
-        <listener>
+    <listener>
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
     </listener>
     <servlet>
@@ -25,11 +25,11 @@
         </session-timeout>
     </session-config>
     
-<welcome-file-list>
-    <welcome-file></welcome-file>
-</welcome-file-list>
+    <welcome-file-list>
+        <welcome-file></welcome-file>
+    </welcome-file-list>
     
-       <filter>
+    <filter>
         <filter-name>encoding-filter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
         <init-param>
@@ -48,5 +48,20 @@
         <filter-name>encoding-filter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    
+    <filter>
+        <filter-name>openEntityManagerFilter</filter-name>
+        <filter-class>com.pepaproch.massmailmailer.controlers.OpenSessionFilter
+        </filter-class>
+        <init-param>
+            <param-name>entityManagerFactoryBeanName</param-name>
+            <param-value>entityManagerFactory</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>openEntityManagerFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping> 
     
 </web-app>
