--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,10 +15,14 @@
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
         <load-on-startup>2</load-on-startup>
     </servlet>
+    
     <servlet-mapping>
         <servlet-name>masmailler</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+
+    
     <session-config>
         <session-timeout>
             30
@@ -26,8 +30,14 @@
     </session-config>
     
     <welcome-file-list>
-        <welcome-file></welcome-file>
+        <welcome-file>index.html</welcome-file>
     </welcome-file-list>
+    
+    <bean id="viewResolver"
+          class="org.springframework.web.servlet.view.InternalResourceViewResolver"
+          p:prefix="/WEB-INF/"
+          p:suffix=".html"
+    />
     
     <filter>
         <filter-name>encoding-filter</filter-name>
