--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,10 +18,12 @@
     
     <servlet-mapping>
         <servlet-name>masmailler</servlet-name>
-        <url-pattern>/</url-pattern>
+        <url-pattern>/app/*</url-pattern>
     </servlet-mapping>
 
-
+      <welcome-file-list>
+        <welcome-file>home.html</welcome-file>
+    </welcome-file-list>
     
     <session-config>
         <session-timeout>
