--- a/pom.xml
+++ b/pom.xml
@@ -38,21 +38,21 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
-            <version>3.2.5.RELEASE</version>
+            <version>4.1.4.RELEASE</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
-            <version>3.2.5.RELEASE</version>
+            <version>4.1.4.RELEASE</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
-            <version>3.2.5.RELEASE</version>
+            <version>4.1.4.RELEASE</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
@@ -104,13 +104,13 @@
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-commons</artifactId>
-      <version>1.6.2.RELEASE</version>
+      <version>1.9.2.RELEASE</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>3.2.5.RELEASE</version>
+      <version>4.1.4.RELEASE</version>
       <type>jar</type>
     </dependency>
     <dependency>
@@ -128,17 +128,20 @@
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-jpa</artifactId>
-      <version>1.4.2.RELEASE</version>
+      <version>1.7.2.RELEASE</version>
+      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>3.2.5.RELEASE</version>
+      <version>4.1.4.RELEASE</version>
+      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-jdbc</artifactId>
-      <version>3.2.5.RELEASE</version>
+      <version>4.1.4.RELEASE</version>
+      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -148,7 +151,8 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>3.2.5.RELEASE</version>
+      <version>4.1.4.RELEASE</version>
+      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
@@ -185,7 +189,8 @@
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-mongodb</artifactId>
-      <version>1.3.2.RELEASE</version>
+      <version>1.6.1.RELEASE</version>
+      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
@@ -263,12 +268,14 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.2.2</version>
+      <version>4.4</version>
+      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context-support</artifactId>
-      <version>3.2.5.RELEASE</version>
+      <version>4.1.4.RELEASE</version>
+      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.postgresql</groupId>
@@ -279,19 +286,26 @@
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-core</artifactId>
-      <version>3.1.1.RELEASE</version>
+      <version>3.2.5.RELEASE</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-web</artifactId>
-      <version>3.1.1.RELEASE</version>
+      <version>3.2.5.RELEASE</version>
       <type>jar</type>
     </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-config</artifactId>
-      <version>3.1.1.RELEASE</version>
+      <version>3.2.5.RELEASE</version>
+      <type>jar</type>
+    </dependency>
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongo-java-driver</artifactId>
+      <version>2.13.0</version>
+      <type>jar</type>
     </dependency>
     <dependency>
             <groupId>javax</groupId>
@@ -309,8 +323,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.2</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
