--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,17 +11,29 @@
         <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
     </listener>
     <servlet>
-        <servlet-name>masmailler</servlet-name>
+        <servlet-name>rest</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-        <load-on-startup>2</load-on-startup>
+        <load-on-startup>1</load-on-startup>
     </servlet>
     
     <servlet-mapping>
-        <servlet-name>masmailler</servlet-name>
-        <url-pattern>/app/*</url-pattern>
+        <servlet-name>rest</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
 
-      <welcome-file-list>
+    
+    <servlet>
+        <servlet-name>ui</servlet-name>
+        <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>ui</servlet-name>
+        <url-pattern>/ui/*</url-pattern>
+    </servlet-mapping>
+
+    <welcome-file-list>
         <welcome-file>home.html</welcome-file>
     </welcome-file-list>
     
